# jsonschema-gentypes

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prospector.yaml  .snyk  BACKPORT_TODO  BREAKING_CHANGES.md  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.txt  Makefile  Pipfile  README.md  SECURITY.md  jsonschema-gentypes.yaml  pip-cve-ignore  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yaml  renovate.json5
.github/workflows/: audit.yaml  backport.yaml  changelog.yaml  clean.yaml  codeql.yaml  dependency-update-review.yaml  main.yaml  pr-checks.yaml  pull-request-automation.yaml  rebuild.yaml
ci/: config.yaml  requirements.txt
jsonschema_gentypes/: __init__.py  api.py  api_draft_04.py  api_draft_06.py  api_draft_07.py  api_draft_2019_09.py  api_draft_2020_12.py  cli.py  configuration.py  jsonschema.py  jsonschema_draft_04.py  jsonschema_draft_06.py  jsonschema_draft_07.py  jsonschema_draft_2019_09.py  jsonschema_draft_2019_09_applicator.py  jsonschema_draft_2019_09_content.py  jsonschema_draft_2019_09_core.py  jsonschema_draft_2019_09_format.py  jsonschema_draft_2019_09_meta_data.py  jsonschema_draft_2019_09_validation.py  jsonschema_draft_2020_12.py  jsonschema_draft_2020_12_applicator.py  jsonschema_draft_2020_12_content.py  jsonschema_draft_2020_12_core.py  jsonschema_draft_2020_12_meta_data.py  jsonschema_draft_2020_12_validation.py  openapi-2025-02-13.json  openapi.py  resolver.py  schema.json  validate.py
tests/: allanycombining.json  allanycombining.py  bad-config.yaml  custom_get_name.json  custom_get_name.py  get_name_properties.py  good-config.yaml  openapi3.json  openapi3.py  recursion.json  test_combining.py  test_custom_get_name.py  test_get_name_properties.py  test_test.py  test_validate.py  test_validate_config.py
