[tool.poetry]
name = "jsonschema-gentypes"
version = "0.0.0"
description = "Tool to generate Python types based on TypedDict from a JSON Schema"
readme = "README.md"
authors = ["Camptocamp <info@camptocamp.com>"]
repository = "https://github.com/camptocamp/jsonschema-gentypes"
license = "BSD-2-Clause"
keywords = ["jsonschema", "types"]
packages = [{ include = "jsonschema_gentypes" }]
include = ["jsonschema_gentypes/py.typed", "jsonschema_gentypes/*.json"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Code Generators',
    'Typing :: Typed',
]

[tool.poetry.scripts]
jsonschema-gentypes = "jsonschema_gentypes.cli:main"

[tool.poetry.dependencies]
# Minimal version should also be set in the jsonschema-gentypes.yaml file
python = ">=3.9,<4"
jsonschema = "4.23.0"
typing-extensions = "4.12.2"
requests = "2.32.3"
"PyYAML" = "6.0.2"
pinyin = { version = "0.4.0", optional = true }
romkan = { version = "0.2.1", optional = true }
romanize = { version = "1.0.2", optional = true }
pre-commit = { version = "4.1.0", optional = true }
referencing = "0.36.2"

[tool.poetry.extras]
generate = []
tools = ["pre-commit"]
extra = ['pinyin', 'romkan', 'romanize']

[tool.poetry.group.dev.dependencies]
prospector = {  version = "1.15.0", extras = ["with_mypy", "with_bandit", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.4"
prospector-profile-utils = "1.21.4"
pytest = "8.3.4"
pytest-cov = "6.0.0"
types-requests = "2.32.0.20241016"
types-pyyaml = "6.0.12.20241230"


[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
