[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint]
select = []
ignore = ["ANN401", "C90", "D100", "D104", "D105", "D107", "D200", "D202", "D207", "D208", "D212", "E501", "EM101", "EM102", "ERA001", "FA", "FBT001", "FBT002", "FIX002", "I001", "PERF203", "PLR09", "PLR2004", "Q000", "S101", "SIM105", "T201", "TD002", "W293"]
extend-select = ["UP", "I", "S", "B", "ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S108", "S113", "S603", "S607", "SLF", "TRY003", "TRY301"]
"**/tests/**" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S108", "S113", "S603", "S607", "SLF", "TRY003", "TRY301"]
"**/test_*.py" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S108", "S113", "S603", "S607", "SLF", "TRY003", "TRY301"]
"**/*_test.py" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S108", "S113", "S603", "S607", "SLF", "TRY003", "TRY301"]

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
# Minimal version should also be set in the jsonschema-gentypes.yaml file
python = ">=3.9,<4"
jsonschema = "4.25.0"
typing-extensions = "4.14.1"
requests = "2.32.4"
"PyYAML" = "6.0.2"
pinyin = { version = "0.4.0", optional = true }
Unidecode = { version = "1.4.0", optional = true }
romanize = { version = "1.0.2", optional = true }
pre-commit = { version = "4.2.0", optional = true }
referencing = "0.36.2"
jsonschema-validator-new = { version = "0.3.2", optional = true }

[tool.poetry.extras]
generate = []
tools = ["pre-commit"]
extra = ['pinyin', 'Unidecode', 'romanize']
validation = ['jsonschema-validator-new']

[tool.poetry.group.dev.dependencies]
prospector = {  version = "1.17.3", extras = ["with_mypy", "with_bandit", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.26.4"
ruff = "0.12.7"
pytest = "8.4.1"
pytest-cov = "6.2.1"
types-requests = "2.32.4.20250611"
types-pyyaml = "6.0.12.20250516"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[project]
dynamic = ["dependencies", "version"]
name = "jsonschema-gentypes"
description = "Tool to generate Python types based on TypedDict from a JSON Schema"
readme = "README.md"
keywords = ["jsonschema", "types"]
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Code Generators',
    'Typing :: Typed',
]
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
packages = [{ include = "jsonschema_gentypes" }]
include = ["jsonschema_gentypes/py.typed", "jsonschema_gentypes/*.json"]
requires-python = ">=3.9"
dependencies = ["jsonschema", "typing-extensions", "requests", "PyYAML", "referencing", "urllib3==2.5.0"]

[project.urls]
repository = "https://github.com/camptocamp/jsonschema-gentypes"
"Bug Tracker" = "https://github.com/camptocamp/jsonschema-gentypes/issues"

[project.scripts]
jsonschema-gentypes = "jsonschema_gentypes.cli:main"

[project.optional-dependencies]
extra = ["pinyin", "Unidecode", "romanize"]
tools = ["pre-commit"]
validation = ["jsonschema-validator-new"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
